# miniflux-notifier

./: .gitignore  Cargo.toml  README.md  TODO.md  miniflux-notifier.service
src/: main.rs  models.rs
